Listo Vinculacion.java y Heladeras.java, hay que hablar sobre los contribuir() y revisar el modelado de RegistroDePersonasEnSituacionVulnerable